Fix issue: BG height isn't 100% in FF on iOS

--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -9,6 +9,10 @@
     margin: 0;
     padding: 0;
   }
+
+  #root {
+    height: 100%;
+  }
 }
 
 body {
